# polysolve_lib

./: LICENSE  README.md  pyproject.toml  test_pysolve.yml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst  usage.rst
polysolve/: __init__.py
