[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Jessica Gould", email = "jessica.gould@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "package to solve 2 or 3 order polynomials"
license = {text = "MIT License"}

keywords = ["polynomials"]
dependencies = ["cowsay"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/JessieGould/polysolve_lib/polysolve"
Repository="https://github.com/JessieGould/polysolve_lib/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints",
]
test = ["pytest"]
